log/build_2023-02-17_10-11-25/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/analyzeObject.py", line 6
    from geometry_msgs.msg import Point()
                                       ^
SyntaxError: invalid syntax

